--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
   
   <nav>
   
-  	<a href="index.html">home</a>
+  	<a href="Index.html">home</a>
   	<a href="login.html">login</a>
     <a href="registration.html">registration</a>
   	<a href="postimage.html">post</a>
