--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   
   <header>
-  
+    <link rel="icon" href="https://sfsu.instructure.com/users/79266/files/1028686/preview?instfs=true">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>a website :O</title>
   	<meta charset="uft-8">
-    <link rel="icon" href="https://sfsu.instructure.com/users/79266/files/1028686/preview?instfs=true" >
     <h1> welcome to the cool zone </h1>
     
   </header>
