--- a/login.html
+++ b/login.html
@@ -4,14 +4,14 @@
   <header>
   
   	<meta charset="uft-8">
-    <link rel="icon" href="https://sfsu.instructure.com/users/79266/files/1028686/preview?instfs=true" >
+<link rel="icon" href="    https://pbs.twimg.com/profile_images/1559281520183021569/TYxa8is7_400x400.jpg">
     <h1> welcome to the cool zone </h1>
     
   </header>
   
   <nav>
   
-  	<a href="index.html">home</a>
+  	<a href="Index.html">home</a>
   	<a href="login.html">login</a>
     <a href="registration.html">registration</a>
   	<a href="postimage.html">post</a>
@@ -23,8 +23,7 @@
 
   <body>
 
-  	<img src="https://sfsu.instructure.com/users/79266/files/1028686/preview?instfs=true" width="150" height= 		"150" alt="IMAGE ERROR oops">
-  	<p>welcome to my website for cool ppl by cool ppl </p>
+    <h2> please log in </h2>
 
   </body>
   
