--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   
-  <header>
+  <head>
     <link rel="icon" href="https://sfsu.instructure.com/users/79266/files/1028686/preview?instfs=true">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
   	<meta charset="uft-8">
     <h1> welcome to the cool zone </h1>
     
-  </header>
+  </head>
   
   <nav>
   
