--- a/login.html
+++ b/login.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   
-  <header>
-  
+  <head>
+    <link rel="icon" href="https://sfsu.instructure.com/users/79266/files/1029224/preview?instfs=true">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>a website :O</title>
   	<meta charset="uft-8">
-<link rel="icon" href="    https://pbs.twimg.com/profile_images/1559281520183021569/TYxa8is7_400x400.jpg">
-    <h1> welcome to the cool zone </h1>
+    <h1> login </h1>
     
-  </header>
+  </head>
   
   <nav>
   
