--- a/login.html
+++ b/login.html
@@ -27,13 +27,19 @@
   <body>
 
     <h2> please log in </h2>
-
+    <form>
+    	<label for="user">username:</label>
+    	<input type="text" id="user">
+    
+    	<label for="pass">password:</label>
+    	<input type="password" id="user">
+	</form>
+    
   </body>
   
   <footer>
   	
-    contact us @ contactus@gmail.com
+    <p>contact us @ contactus@gmail.com</p>
   </footer>
   
 </html>
-
