--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>a website :O - login</title>
+    <title>a website :O</title>
   	<meta charset="uft-8">
     <h1> welcome to the cool zone </h1>
     
