--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <link rel="icon" href="https://sfsu.instructure.com/users/79266/files/1029224/preview?instfs=true">
+    <link rel="icon" href="https://media.discordapp.net/attachments/782522809673842709/1022640251874848818/IMG_4240.png?width=941&height=932">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
