--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <link rel="icon" href="https://media.discordapp.net/attachments/782522809673842709/1022640251874848818/IMG_4240.png?width=941&height=932">
+    <link rel="icon" href="https://imgur.com/4crAbWT">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
 
   <body>
 
-  	<img src="https://sfsu.instructure.com/users/79266/files/1028686/preview?instfs=true" width="150" height= 		"150" alt="IMAGE ERROR oops">
+  	<img src="https://imgur.com/4crAbWT" width="150" height= 		"150" alt="IMAGE ERROR oops">
   	<p>welcome to my website for cool ppl by cool ppl </p>
 
   </body>
