--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
   <head>
-    <link rel="icon" href="https://imgur.com/4crAbWT">
+    <link rel="icon" href="https://i.postimg.cc/66DVdS4d/IMG-4240-1.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
 
   <body>
 
-  	<img src="https://imgur.com/4crAbWT" width="150" height= 		"150" alt="IMAGE ERROR oops">
+  	<img src="https://i.postimg.cc/66DVdS4d/IMG-4240-1.png" width="150" height= 		"150" alt="IMAGE ERROR oops">
   	<p>welcome to my website for cool ppl by cool ppl </p>
 
   </body>
