--- a/postimage.html
+++ b/postimage.html
@@ -27,7 +27,7 @@
 
   <body>
 
-    <h2> please fill out the information below to register your account </h2>
+    <h2> post your images here </h2>
     <form action="/action_page.php">
     	<input type="text" id="fname" name="title" placeholder="Post Title"><br>
     <br>
