--- a/viewpost.html
+++ b/viewpost.html
@@ -27,7 +27,7 @@
 
   <body>
 
-    <h2> please fill out the information below to register your account </h2>
+    <h2> view posts here </h2>
     
     <h3>POST TITLE</h3>
     <img src="https://i.postimg.cc/j2PbjLQB/IMG-4245.png" width="300" height= "300" alt="IMAGE ERROR oops">
